--- a/po-libgimp/sk.po
+++ b/po-libgimp/sk.po
@@ -1,4 +1,5 @@
 # Slovak translation of 
+# Slovak translation of
 # Slovak translation of gimp-libgimp.HEAD.pot
 # Copyright (C) 2002,2003, 2004 Free Software Foundation, Inc.
 # Zdenko Podobný <zdpo@mailbox.sk>, 2002,2003, 2004.
@@ -7,14 +8,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-03-04 00:14+0100\n"
-"PO-Revision-Date: 2004-01-07 22:08+0100\n"
+"POT-Creation-Date: 2004-03-10 14:44+0100\n"
+"PO-Revision-Date: 2004-03-10 20:17+0100\n"
 "Last-Translator: Zdenko Podobný <zdpo@mailbox.sk>\n"
 "Language-Team: Slovak <sk-i18n@lists.linux.sk>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.2beta3\n"
+"X-Generator: KBabel 1.3\n"
 
 #: libgimp/gimpbrushmenu.c:132
 msgid "Brush Selection"
@@ -508,15 +509,14 @@ msgstr ""
 
 #: libgimpwidgets/gimpwidgets.c:1275
 msgid "_New Seed"
-msgstr ""
+msgstr "_Nové hniezdo"
 
 #: libgimpwidgets/gimpwidgets.c:1288
 msgid "Seed random number generator with a generated random number"
 msgstr "Hniezdo náhodného generátoru s generovaným náhodným číslom"
 
 #: libgimpwidgets/gimpwidgets.c:1292
-#, fuzzy
-msgid "Randomize"
+msgid "_Randomize"
 msgstr "_Náhodnosť"
 
 #: modules/cdisplay_colorblind.c:124
@@ -683,3 +683,4 @@ msgstr "Tlak"
 
 #~ msgid "Parameter Settings"
 #~ msgstr "Nastavenie parametrov"
+
