--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-11  Stanislav Visnovsky <visnovsky@nenya.ms.mff.cuni.cz>
+
+	* sk.po: Updated Slovak translation by Zdenko Podobny.
+
 2004-03-10  Sven Neumann  <sven@gimp.org>
 
 	* POTFILES.in: added missing file (bug #136713).
