2004-03-11  Sven Neumann  <sven@gimp.org>
	* app/tools/gimpimagemaptool.c (gimp_image_map_tool_initialize):
	connect notify::preview using g_signal_connect_object().
	Fixes bug #136850.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12602 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-03-11  Sven Neumann  <sven@gimp.org>
+
+	* app/tools/gimpimagemaptool.c (gimp_image_map_tool_initialize):
+	connect to notify::preview using g_signal_connect_object().
+	Fixes bug #136850.
+
 2004-03-10  Manish Singh  <yosh@gimp.org>
 
 	* data/misc/gimp.applications.in: GIMP_VISIBLE_NAME doesn't exist
