2004-03-11  Sven Neumann  <sven@gimp.org>
	* plug-ins/common/colortoalpha.c: when running in interactive
	mode, get the foreground color after restoring the parameters from
	the last run.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12604 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-03-11  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/colortoalpha.c: when running in interactive
+	mode, get the foreground color after restoring the parameters from
+	the last run.
+
+2004-03-11  Sven Neumann  <sven@gimp.org>
+
 	* app/tools/gimpimagemaptool.c (gimp_image_map_tool_initialize):
 	connect to notify::preview using g_signal_connect_object().
 	Fixes bug #136850.
