2004-03-11  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
	* es.po: Updated Spanish translation.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12607 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-11  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
+
+	* es.po: Updated Spansih translation.
+
 2004-03-11  Sven Neumann  <sven@gimp.org>
 
 	* POTFILES.in: removed app/text/gimptext.c.
