2004-03-11  Sven Neumann  <sven@gimp.org>
	* app/tools/gimptextoptions.[ch]: redid the color handling.
	Still not perfect, but it is somewhat cleaner.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12608 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-03-11  Sven Neumann  <sven@gimp.org>
 
+	* app/tools/gimptextoptions.[ch]: redid the color handling.
+	differently. Still not perfect, but it is somewhat cleaner.
+
+2004-03-11  Sven Neumann  <sven@gimp.org>
+
 	* app/core/gimpcontext.c: reverted a small change that I didn't
 	want to commit at all.
 	
