2004-03-11  Sven Neumann  <sven@gimp.org>
	* app/tools/gimptextoptions.c (gimp_text_options_create_text):
	set the color of the new text from the context foreground color.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12609 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,12 @@
 2004-03-11  Sven Neumann  <sven@gimp.org>
 
+	* app/tools/gimptextoptions.c (gimp_text_options_create_text):
+	set the color of the new text from the context foreground color.
+
+2004-03-11  Sven Neumann  <sven@gimp.org>
+
 	* app/tools/gimptextoptions.[ch]: redid the color handling.
-	differently. Still not perfect, but it is somewhat cleaner.
+	Still not perfect, but it is somewhat cleaner.
 
 2004-03-11  Sven Neumann  <sven@gimp.org>
 
