--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-03-12  Simon Budig  <simon@gimp.org>
+
+	* libgimp/gimppixelfetcher.c: fixed off-by-one error
+	in gimp_pixel_fetcher_get_pixel () for EDGE_BLACK mode.
+
+	Fixes bug #136907
+
 2004-03-12  Sven Neumann  <sven@gimp.org>
 
 	* app/display/gimpdisplayshell-dnd.c (gimp_display_shell_bucket_fill):
