--- a/po-libgimp/zh_CN.po
+++ b/po-libgimp/zh_CN.po
@@ -1,47 +1,46 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR Free Software Foundation, Inc.
-# Xie Yuheng <phycommusyee@263.net>, 2001
+# Yuheng Xie <elephant@linux.net.cn>, 2001-2004.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: gimp-libgimp\n"
-"Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-03-04 00:14+0100\n"
-"PO-Revision-Date: 2002-10-17 22:00+0800\n"
-"Last-Translator: Xie Yuheng <phycommusyee@263.net>\n"
+"PO-Revision-Date: 2004-03-12 19:09+0800\n"
+"Last-Translator: Yuheng Xie <elephant@linux.net.cn>\n"
 "Language-Team: zh_CN <i18n-translation@lists.linux.net.cn>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Translator: Xie Yuheng <phycommusyee@263.net>\n"
+"Report-Msgid-Bugs-To: \n"
+"Translator: Yuheng Xie <elephant@linux.net.cn>\n"
 
 #: libgimp/gimpbrushmenu.c:132
-#, fuzzy
 msgid "Brush Selection"
-msgstr "单位选择"
+msgstr "画笔选择"
 
 #: libgimp/gimpbrushmenu.c:161 libgimp/gimppatternmenu.c:144
 msgid "_Browse..."
-msgstr ""
+msgstr "浏览(_B)..."
 
 #: libgimp/gimpexport.c:215 libgimp/gimpexport.c:251
-#, fuzzy, c-format
+#, c-format
 msgid "%s can't handle layers"
-msgstr "无法处理图层"
+msgstr "%s 无法处理图层"
 
 #: libgimp/gimpexport.c:216 libgimp/gimpexport.c:225 libgimp/gimpexport.c:234
 msgid "Merge Visible Layers"
-msgstr "合并可见的图层"
+msgstr "合并可见图层"
 
 #: libgimp/gimpexport.c:224
-#, fuzzy, c-format
+#, c-format
 msgid "%s can't handle layer offsets, size or opacity"
-msgstr "无法处理图层位移、大小或不透明度"
+msgstr "%s 无法处理图层位移、大小或不透明度"
 
 #: libgimp/gimpexport.c:233 libgimp/gimpexport.c:242
-#, fuzzy, c-format
+#, c-format
 msgid "%s can only handle layers as animation frames"
-msgstr "只能以动画的帧的方式处理图层"
+msgstr "%s 只能以动画的帧的方式处理图层"
 
 #: libgimp/gimpexport.c:234 libgimp/gimpexport.c:243
 msgid "Save as Animation"
@@ -52,42 +51,41 @@ msgid "Flatten Image"
 msgstr "平整图像"
 
 #: libgimp/gimpexport.c:260
-#, fuzzy, c-format
+#, c-format
 msgid "%s can't handle transparency"
-msgstr "无法处理透明度"
+msgstr "%s 无法处理透明度"
 
 #: libgimp/gimpexport.c:269
-#, fuzzy, c-format
+#, c-format
 msgid "%s can't handle layer masks"
-msgstr "无法处理图层"
+msgstr "%s 无法处理图层蒙板"
 
 #: libgimp/gimpexport.c:270
-#, fuzzy
 msgid "Apply Layer Masks"
-msgstr "图层蒙板"
+msgstr "应用图层蒙板"
 
 #: libgimp/gimpexport.c:278
-#, fuzzy, c-format
+#, c-format
 msgid "%s can only handle RGB images"
-msgstr "只能处理 RGB 图像"
+msgstr "%s 只能处理 RGB 图像"
 
 #: libgimp/gimpexport.c:279 libgimp/gimpexport.c:317 libgimp/gimpexport.c:326
 msgid "Convert to RGB"
 msgstr "转换到 RGB"
 
 #: libgimp/gimpexport.c:287
-#, fuzzy, c-format
+#, c-format
 msgid "%s can only handle grayscale images"
-msgstr "只能处理灰度图像"
+msgstr "%s 只能处理灰度图像"
 
 #: libgimp/gimpexport.c:288 libgimp/gimpexport.c:317 libgimp/gimpexport.c:338
 msgid "Convert to Grayscale"
 msgstr "转换到灰度"
 
 #: libgimp/gimpexport.c:296
-#, fuzzy, c-format
+#, c-format
 msgid "%s can only handle indexed images"
-msgstr "只能处理索引图像"
+msgstr "%s 只能处理索引图像"
 
 #: libgimp/gimpexport.c:297 libgimp/gimpexport.c:326 libgimp/gimpexport.c:336
 msgid ""
@@ -95,41 +93,40 @@ msgid ""
 "(Do it manually to tune the result)"
 msgstr ""
 "使用默认的设置转换到索引\n"
-"(手工操作以调整结果)"
+"(如需调节请手动转换)"
 
 #: libgimp/gimpexport.c:306
-#, fuzzy, c-format
+#, c-format
 msgid "%s can only handle bitmap (two color) indexed images"
-msgstr "只能处理 RGB 或索引图像"
+msgstr "%s 只能处理位图(两色)索引图像"
 
 #: libgimp/gimpexport.c:307
-#, fuzzy
 msgid ""
 "Convert to Indexed using bitmap default settings\n"
 "(Do it manually to tune the result)"
 msgstr ""
-"使用默认的设置转换到索引\n"
-"(手工操作以调整结果)"
+"使用默认的位图设置转换到索引\n"
+"(如需调节请手动转换)"
 
 #: libgimp/gimpexport.c:316
-#, fuzzy, c-format
+#, c-format
 msgid "%s can only handle RGB or grayscale images"
-msgstr "只能处理 RGB 或灰度图像"
+msgstr "%s 只能处理 RGB 或灰度图像"
 
 #: libgimp/gimpexport.c:325
-#, fuzzy, c-format
+#, c-format
 msgid "%s can only handle RGB or indexed images"
-msgstr "只能处理 RGB 或索引图像"
+msgstr "%s 只能处理 RGB 或索引图像"
 
 #: libgimp/gimpexport.c:335
-#, fuzzy, c-format
+#, c-format
 msgid "%s can only handle grayscale or indexed images"
-msgstr "只能处理灰度或索引图像"
+msgstr "%s 只能处理灰度或索引图像"
 
 #: libgimp/gimpexport.c:346
-#, fuzzy, c-format
+#, c-format
 msgid "%s needs an alpha channel"
-msgstr "需要一个 alpha 通道"
+msgstr "%s 需要一个 alpha 通道"
 
 #: libgimp/gimpexport.c:347
 msgid "Add Alpha Channel"
@@ -148,63 +145,58 @@ msgid "Export File"
 msgstr "导出文件"
 
 #: libgimp/gimpexport.c:461
-#, fuzzy
 msgid "_Ignore"
-msgstr "忽略"
+msgstr "忽略(_I)"
 
 #: libgimp/gimpexport.c:463
-#, fuzzy
 msgid "_Export"
-msgstr "导出"
+msgstr "导出(_E)"
 
 #. the headline
 #: libgimp/gimpexport.c:485
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Your image should be exported before it can be saved as %s for the following "
 "reasons:"
-msgstr "你的图像在保存之前应该先进行导出，因为："
+msgstr "你的图像在保存为 %s 之前应该先进行导出，因为："
 
 #: libgimp/gimpexport.c:563
 msgid "The export conversion won't modify your original image."
 msgstr "导出转换不会改变你原来的图像。"
 
 #: libgimp/gimpexport.c:665
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "You are about to save a layer mask as %s.\n"
 "This will not save the visible layers."
 msgstr ""
-"你将要把 %s 保存为 %s。\n"
-"这样将不会保存可见的图层。"
+"你将要把图层蒙板保存为 %s。\n"
+"这将不会保存可见的图层。"
 
 #: libgimp/gimpexport.c:671
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "You are about to save a channel (saved selection) as %s.\n"
 "This will not save the visible layers."
 msgstr ""
-"你将要把 %s 保存为 %s。\n"
-"这样将不会保存可见的图层。"
+"你将要把通道(已保存的选区)保存为 %s。\n"
+"这将不会保存可见的图层。"
 
 #: libgimp/gimpfontmenu.c:89
-#, fuzzy
 msgid "Font Selection"
-msgstr "单位选择"
+msgstr "字体选择"
 
 #: libgimp/gimpgradientmenu.c:103
-#, fuzzy
 msgid "Gradient Selection"
-msgstr "单位选择"
+msgstr "渐变选择"
 
 #: libgimp/gimpmenu.c:407
 msgid "None"
 msgstr "无"
 
 #: libgimp/gimppatternmenu.c:115
-#, fuzzy
 msgid "Pattern Selection"
-msgstr "单位选择"
+msgstr "图案选择"
 
 #: libgimp/gimpunitcache.c:57
 msgid "percent"
@@ -212,193 +204,188 @@ msgstr "百分点"
 
 #: libgimpbase/gimputils.c:161 libgimpbase/gimputils.c:166
 msgid "(invalid UTF-8 string)"
-msgstr ""
+msgstr "(无效的 UTF-8 字符串)"
 
 #: libgimpbase/gimputils.c:244
-#, fuzzy, c-format
+#, c-format
 msgid "%d Bytes"
-msgstr "字节"
+msgstr "%d 字节"
 
 #: libgimpbase/gimputils.c:249
 #, c-format
 msgid "%.2f KB"
-msgstr ""
+msgstr "%.2f KB"
 
 #: libgimpbase/gimputils.c:253
 #, c-format
 msgid "%.1f KB"
-msgstr ""
+msgstr "%.1f KB"
 
 #: libgimpbase/gimputils.c:257
 #, c-format
 msgid "%d KB"
-msgstr ""
+msgstr "%d KB"
 
 #: libgimpbase/gimputils.c:264
 #, c-format
 msgid "%.2f MB"
-msgstr ""
+msgstr "%.2f MB"
 
 #: libgimpbase/gimputils.c:268
 #, c-format
 msgid "%.1f MB"
-msgstr ""
+msgstr "%.1f MB"
 
 #: libgimpbase/gimputils.c:272
-#, fuzzy, c-format
+#, c-format
 msgid "%d MB"
-msgstr "字节"
+msgstr "%d MB"
 
 #: libgimpbase/gimputils.c:279
 #, c-format
 msgid "%.2f GB"
-msgstr ""
+msgstr "%.2f GB"
 
 #: libgimpbase/gimputils.c:283
 #, c-format
 msgid "%.1f GB"
-msgstr ""
+msgstr "%.1f GB"
 
 #: libgimpbase/gimputils.c:287
-#, fuzzy, c-format
+#, c-format
 msgid "%d GB"
-msgstr "字节"
+msgstr "%d GB"
 
 #: libgimpmodule/gimpmodule.c:177
 #, c-format
 msgid "Loading module: '%s'\n"
-msgstr ""
+msgstr "正在加载模块：“%s”\n"
 
 #: libgimpmodule/gimpmodule.c:194 libgimpmodule/gimpmodule.c:213
 #: libgimpmodule/gimpmodule.c:328 libgimpmodule/gimpmodule.c:356
 #: libgimpmodule/gimpmodule.c:450
 #, c-format
 msgid "Module '%s' load error: %s"
-msgstr ""
+msgstr "模块“%s”加载错误：%s"
 
 #: libgimpmodule/gimpmodule.c:283
 #, c-format
 msgid "Skipping module: '%s'\n"
-msgstr ""
+msgstr "正在跳过模块：“%s”\n"
 
 #: libgimpmodule/gimpmodule.c:424
 msgid "Module error"
-msgstr ""
+msgstr "模块错误"
 
 #: libgimpmodule/gimpmodule.c:425
 msgid "Loaded"
-msgstr ""
+msgstr "已加载"
 
 #: libgimpmodule/gimpmodule.c:426
 msgid "Load failed"
-msgstr ""
+msgstr "加载失败"
 
 #: libgimpmodule/gimpmodule.c:427
 msgid "Not loaded"
-msgstr ""
+msgstr "未加载"
 
 #: libgimpthumb/gimpthumb-utils.c:196
 #, c-format
 msgid "Failed to create thumbnail folder '%s'."
-msgstr ""
+msgstr "无法创建缩略图文件夹“%s”。"
 
 #: libgimpwidgets/gimpcolorbutton.c:93
-#, fuzzy
 msgid "/_Foreground Color"
-msgstr "/前景色"
+msgstr "/前景色(_F)"
 
 #: libgimpwidgets/gimpcolorbutton.c:95
-#, fuzzy
 msgid "/_Background Color"
-msgstr "/背景色"
+msgstr "/背景色(_B)"
 
 #: libgimpwidgets/gimpcolorbutton.c:98
-#, fuzzy
 msgid "/Blac_k"
-msgstr "/黑"
+msgstr "/黑(_K)"
 
 #: libgimpwidgets/gimpcolorbutton.c:100
-#, fuzzy
 msgid "/_White"
-msgstr "/白"
+msgstr "/白(_W)"
 
 #: libgimpwidgets/gimpcolorscales.c:142
-#, fuzzy
 msgid "Scales"
-msgstr "缩放(_S)"
+msgstr "缩放"
 
 #: libgimpwidgets/gimpcolorscales.c:164 libgimpwidgets/gimpcolorselect.c:353
 msgid "_H"
-msgstr ""
+msgstr "色(_H)"
 
 #: libgimpwidgets/gimpcolorscales.c:165 libgimpwidgets/gimpcolorselect.c:353
 msgid "_S"
-msgstr ""
+msgstr "饱(_S)"
 
 #: libgimpwidgets/gimpcolorscales.c:166 libgimpwidgets/gimpcolorselect.c:353
 msgid "_V"
-msgstr ""
+msgstr "亮(_V)"
 
 #: libgimpwidgets/gimpcolorscales.c:167 libgimpwidgets/gimpcolorselect.c:353
 msgid "_R"
-msgstr ""
+msgstr "红(_R)"
 
 #: libgimpwidgets/gimpcolorscales.c:168 libgimpwidgets/gimpcolorselect.c:353
 msgid "_G"
-msgstr ""
+msgstr "绿(_G)"
 
 #: libgimpwidgets/gimpcolorscales.c:169 libgimpwidgets/gimpcolorselect.c:353
 msgid "_B"
-msgstr ""
+msgstr "蓝(_B)"
 
 #: libgimpwidgets/gimpcolorscales.c:170
 msgid "_A"
-msgstr ""
+msgstr "A(_A)"
 
 #: libgimpwidgets/gimpcolorscales.c:174 libgimpwidgets/gimpcolorselect.c:357
 msgid "Hue"
-msgstr ""
+msgstr "色调"
 
 #: libgimpwidgets/gimpcolorscales.c:175 libgimpwidgets/gimpcolorselect.c:358
 #: modules/cdisplay_proof.c:323
 msgid "Saturation"
-msgstr ""
+msgstr "饱和度"
 
 #: libgimpwidgets/gimpcolorscales.c:176 libgimpwidgets/gimpcolorselect.c:359
 msgid "Value"
-msgstr ""
+msgstr "亮度"
 
 #: libgimpwidgets/gimpcolorscales.c:177 libgimpwidgets/gimpcolorselect.c:360
 msgid "Red"
-msgstr ""
+msgstr "红色"
 
 #: libgimpwidgets/gimpcolorscales.c:178 libgimpwidgets/gimpcolorselect.c:361
 msgid "Green"
-msgstr ""
+msgstr "绿色"
 
 #: libgimpwidgets/gimpcolorscales.c:179 libgimpwidgets/gimpcolorselect.c:362
 msgid "Blue"
-msgstr ""
+msgstr "蓝色"
 
 #: libgimpwidgets/gimpcolorscales.c:180 libgimpwidgets/gimpcolorselect.c:363
 msgid "Alpha"
-msgstr ""
+msgstr "Alpha"
 
 #: libgimpwidgets/gimpcolorscales.c:254
 msgid "Hexadecimal color notation as used in HTML"
-msgstr ""
+msgstr "HTML 中所使用的十六进制颜色表示"
 
 #: libgimpwidgets/gimpcolorscales.c:268
 msgid "He_x Triplet:"
-msgstr ""
+msgstr "十六进制值(_X)："
 
 #: libgimpwidgets/gimpcolorselection.c:203
 msgid "Current:"
-msgstr ""
+msgstr "当前："
 
 #: libgimpwidgets/gimpcolorselection.c:225
 msgid "Old:"
-msgstr ""
+msgstr "旧的："
 
 #: libgimpwidgets/gimpfileentry.c:350
 msgid "Select Folder"
@@ -410,11 +397,11 @@ msgstr "选择文件"
 
 #: libgimpwidgets/gimpmemsizeentry.c:234
 msgid "KiloBytes"
-msgstr "K 字节"
+msgstr "千字节"
 
 #: libgimpwidgets/gimpmemsizeentry.c:235
 msgid "MegaBytes"
-msgstr "M 字节"
+msgstr "兆字节"
 
 #: libgimpwidgets/gimpmemsizeentry.c:236
 msgid "GigaBytes"
@@ -425,20 +412,19 @@ msgid ""
 "Click the eyedropper, then click a color anywhere on your screen to select "
 "that color."
 msgstr ""
+"点击滴管，然后点击你的屏幕上任何位置的颜色即可选取该颜色。"
 
 #: libgimpwidgets/gimpstock.c:113
 msgid "Anchor"
-msgstr "锚点"
+msgstr "固定"
 
 #: libgimpwidgets/gimpstock.c:114
-#, fuzzy
 msgid "_Duplicate"
-msgstr "复制"
+msgstr "复制(_D)"
 
 #: libgimpwidgets/gimpstock.c:115
-#, fuzzy
 msgid "_Edit"
-msgstr "编辑"
+msgstr "编辑(_E)"
 
 #: libgimpwidgets/gimpstock.c:116
 msgid "Linked"
@@ -462,15 +448,15 @@ msgstr "可见"
 
 #: libgimpwidgets/gimpstock.c:168
 msgid "L_etter Spacing"
-msgstr "字母间距(_L)"
+msgstr "字母间距(_E)"
 
 #: libgimpwidgets/gimpstock.c:169
 msgid "L_ine Spacing"
-msgstr "行距(_L)"
+msgstr "行距(_I)"
 
 #: libgimpwidgets/gimpstock.c:184
 msgid "_Resize"
-msgstr "重置大小(_R)"
+msgstr "更改大小(_R)"
 
 #: libgimpwidgets/gimpstock.c:185 libgimpwidgets/gimpstock.c:284
 msgid "_Scale"
@@ -478,7 +464,7 @@ msgstr "缩放(_S)"
 
 #: libgimpwidgets/gimpstock.c:263
 msgid "Crop"
-msgstr "剪割"
+msgstr "剪裁"
 
 #: libgimpwidgets/gimpstock.c:280
 msgid "_Transform"
@@ -509,210 +495,168 @@ msgid "Factor"
 msgstr "因子"
 
 #: libgimpwidgets/gimpwidgets.c:1271
-#, fuzzy
 msgid ""
 "Use this value for random number generator seed - this allows you to repeat "
 "a given \"random\" operation"
 msgstr ""
-"如果“时间”按钮没有按下，将使用这个值作为随机数生成种子 - 这将允许你重复一个指"
-"定的“随机”操作"
+"使用这个值作为随机数生成种子 - 这将允许你重复一个指定的“随机”操作"
 
 #: libgimpwidgets/gimpwidgets.c:1275
 msgid "_New Seed"
-msgstr ""
+msgstr "新种子(_N)"
 
 #: libgimpwidgets/gimpwidgets.c:1288
-#, fuzzy
 msgid "Seed random number generator with a generated random number"
-msgstr "以当前时间作为随机数生成器的种子 - 这保证了一定程度的随机性"
+msgstr "以生成的随机数作为随机数生成器的种子"
 
 #: libgimpwidgets/gimpwidgets.c:1292
 msgid "Randomize"
-msgstr ""
+msgstr "随机"
 
 #: modules/cdisplay_colorblind.c:124
 msgid "Color deficit simulation filter (Brettel-Vienot-Mollon algorithm)"
-msgstr ""
+msgstr "色彩缺失模拟滤镜(Brettel-Vienot-Mollon 算法)"
 
 #: modules/cdisplay_colorblind.c:190
 msgid "Color Deficient Vision"
-msgstr ""
+msgstr "视觉色彩缺失"
 
 #: modules/cdisplay_colorblind.c:464
 msgid "Color _Deficiency Type:"
-msgstr ""
+msgstr "色彩缺失类型(_D)："
 
 #: modules/cdisplay_colorblind.c:473
 msgid "Protanopia (insensitivity to red)"
-msgstr ""
+msgstr "红色盲(对红色不敏感)"
 
 #: modules/cdisplay_colorblind.c:476
 msgid "Deuteranopia (insensitivity to green)"
-msgstr ""
+msgstr "绿色盲(对绿色不敏感)"
 
 #: modules/cdisplay_colorblind.c:479
 msgid "Tritanopia (insensitivity to blue)"
-msgstr ""
+msgstr "蓝色盲(对蓝色不敏感)"
 
 #: modules/cdisplay_gamma.c:90
 msgid "Gamma color display filter"
-msgstr ""
+msgstr "Gamma 颜色显示滤镜"
 
 #: modules/cdisplay_gamma.c:156
 msgid "Gamma"
-msgstr ""
+msgstr "Gamma"
 
 #: modules/cdisplay_gamma.c:311
 msgid "_Gamma:"
-msgstr ""
+msgstr "Gamma(_G)："
 
 #: modules/cdisplay_highcontrast.c:90
 msgid "High Contrast color display filter"
-msgstr ""
+msgstr "高对比度颜色显示滤镜"
 
 #: modules/cdisplay_highcontrast.c:156
 msgid "Contrast"
-msgstr ""
+msgstr "对比度"
 
 #: modules/cdisplay_highcontrast.c:308
 msgid "Contrast C_ycles:"
-msgstr ""
+msgstr "对比循环(_Y)："
 
 #: modules/cdisplay_proof.c:102
 msgid "Color proof filter using ICC color profile"
-msgstr ""
+msgstr "使用 ICC 颜色配置文件的颜色校对滤镜"
 
 #: modules/cdisplay_proof.c:166
 msgid "Color Proof"
-msgstr ""
+msgstr "颜色校对"
 
 #: modules/cdisplay_proof.c:319
 msgid "Perceptual"
-msgstr ""
+msgstr "感官"
 
 #: modules/cdisplay_proof.c:321
 msgid "Relative Colorimetric"
-msgstr ""
+msgstr "相对色度"
 
 #: modules/cdisplay_proof.c:325
 msgid "Absolute Colorimetric"
-msgstr ""
+msgstr "绝对色度"
 
 #: modules/cdisplay_proof.c:331
 msgid "_Intent:"
-msgstr ""
+msgstr "目标(_I)："
 
 #: modules/cdisplay_proof.c:334
 msgid "Choose an ICC Color Profile"
-msgstr ""
+msgstr "选择 ICC 颜色配置文件"
 
 #: modules/cdisplay_proof.c:337
 msgid "_Profile:"
-msgstr ""
+msgstr "配置文件(_P)："
 
 #: modules/cdisplay_proof.c:345
 msgid "_Black Point Compensation"
-msgstr ""
+msgstr "黑点补偿(_B)"
 
 #: modules/colorsel_cmyk.c:73
 msgid "CMYK color selector"
-msgstr ""
+msgstr "CMYK 颜色选择器"
 
 #: modules/colorsel_cmyk.c:132
 msgid "CMYK"
-msgstr ""
+msgstr "CMYK"
 
 #: modules/colorsel_cmyk.c:149
 msgid "_C"
-msgstr ""
+msgstr "青(_C)"
 
 #: modules/colorsel_cmyk.c:150
 msgid "_M"
-msgstr ""
+msgstr "品(_M)"
 
 #: modules/colorsel_cmyk.c:151
 msgid "_Y"
-msgstr ""
+msgstr "黄(_Y)"
 
 #: modules/colorsel_cmyk.c:152
 msgid "_K"
-msgstr ""
+msgstr "黑(_K)"
 
 #: modules/colorsel_cmyk.c:156
-#, fuzzy
 msgid "Cyan"
-msgstr "取消"
+msgstr "青色"
 
 #: modules/colorsel_cmyk.c:157
 msgid "Magenta"
-msgstr ""
+msgstr "品红"
 
 #: modules/colorsel_cmyk.c:158
 msgid "Yellow"
-msgstr ""
+msgstr "黄色"
 
 #: modules/colorsel_cmyk.c:159
-#, fuzzy
 msgid "Black"
-msgstr "/黑"
+msgstr "黑色"
 
 #: modules/colorsel_cmyk.c:193
 msgid "Black Pullout (%):"
-msgstr ""
+msgstr "黑色量(%)："
 
 #: modules/colorsel_triangle.c:110
 msgid "Painter-style triangle color selector"
-msgstr ""
+msgstr "画家风格的三角颜色选择器"
 
 #: modules/colorsel_triangle.c:182
 msgid "Triangle"
-msgstr ""
+msgstr "三角"
 
 #: modules/colorsel_water.c:104
 msgid "Watercolor style color selector"
-msgstr ""
+msgstr "水彩风格的颜色选择器"
 
 #: modules/colorsel_water.c:176
 msgid "Watercolor"
-msgstr ""
+msgstr "水彩"
 
 #: modules/colorsel_water.c:251
 msgid "Pressure"
-msgstr ""
-
-#, fuzzy
-#~ msgid "Parameter Settings"
-#~ msgstr "单位选择"
-
-#~ msgid "a channel (saved selection)"
-#~ msgstr "通道(已保存的选区)"
-
-#~ msgid "_Time"
-#~ msgstr "时间(_T)"
-
-#~ msgid "pixel"
-#~ msgstr "像素"
-
-#~ msgid "pixels"
-#~ msgstr "像素"
-
-#~ msgid "inches"
-#~ msgstr "英寸"
-
-#~ msgid "millimeter"
-#~ msgstr "毫米"
-
-#~ msgid "millimeters"
-#~ msgstr "毫米"
-
-#~ msgid "point"
-#~ msgstr "点"
-
-#~ msgid "points"
-#~ msgstr "点"
-
-#~ msgid "picas"
-#~ msgstr "派卡"
-
-#~ msgid "Select Directory"
-#~ msgstr "选择目录"
+msgstr "压力"
