--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-03-12  Sven Neumann  <sven@gimp.org>
+
+	* app/tools/gimpcurvestool.c
+	* app/tools/gimpinktool.c
+	* app/tools/gimptool.c: print debug output to stderr.
+
 2004-03-12  Simon Budig  <simon@gimp.org>
 
 	* libgimp/gimppixelfetcher.c: fixed off-by-one error
