--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-12  Sven Neumann  <sven@gimp.org>
+
+	* POTFILES.in: added missing app/widgets/gimpthumbbox.c.
+
 2004-03-12  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
