--- a/po-libgimp/ChangeLog
+++ b/po-libgimp/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-12  Sven Neumann  <sven@gimp.org>
+
+	* POTFILES.in: added missing libgimpwidgets/gimppatheditor.c.
+
 2004-03-12  Funda Wang  <fundawang@linux.net.cn>
 
 	* zh_CN.po: Updated Simplified Chinese translation.
