--- a/po-libgimp/de.po
+++ b/po-libgimp/de.po
@@ -10,8 +10,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: GIMP 1.3.27\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-03-05 14:12+0100\n"
-"PO-Revision-Date: 2004-03-05 14:22+0100\n"
+"POT-Creation-Date: 2004-03-12 16:28+0100\n"
+"PO-Revision-Date: 2004-03-12 16:28+0100\n"
 "Last-Translator: Sven Neumann <sven@gimp.org>\n"
 "Language-Team: German <gnome-de@gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -409,6 +409,14 @@ msgstr "MegaByte"
 #: libgimpwidgets/gimpmemsizeentry.c:236
 msgid "GigaBytes"
 msgstr "GigaByte"
+
+#: libgimpwidgets/gimppatheditor.c:243
+msgid "Writable"
+msgstr "Schreibbar"
+
+#: libgimpwidgets/gimppatheditor.c:252
+msgid "Folder"
+msgstr "Verzeichnis"
 
 #: libgimpwidgets/gimppickbutton.c:141
 msgid ""
