*** empty log message ***
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12623 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-03-12  Sven Neumann  <sven@gimp.org>
 
+	* data/misc/gimp.keys.in: removed category entry. This would have
+	to be translated and it's not our job to define where image/jpeg
+	belongs to.
+
+2004-03-12  Sven Neumann  <sven@gimp.org>
+
 	* app/tools/gimpcurvestool.c
 	* app/tools/gimpinktool.c
 	* app/tools/gimptool.c: print debug output to stderr.
