2004-03-12  Vincent van Adrighem  <adrighem@gnome.org>
	* nl.po: Translation updated by Tino Meinen.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12625 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po-libgimp/ChangeLog
+++ b/po-libgimp/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-12  Vincent van Adrighem  <adrighem@gnome.org>
+
+	* nl.po: Translation updated by Tino Meinen.
+
 2004-03-12  Sven Neumann  <sven@gimp.org>
 
 	* POTFILES.in: added missing libgimpwidgets/gimppatheditor.c.
