--- a/po-libgimp/nl.po
+++ b/po-libgimp/nl.po
@@ -4,10 +4,9 @@
 # Branko Collin <collin@xs4all.nl>, 2001
 msgid ""
 msgstr ""
-"Project-Id-Version: GIMP 1.2.3\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-03-04 00:14+0100\n"
-"PO-Revision-Date: 2003-09-03 03:52+0100\n"
+"Project-Id-Version: GIMP 2.0\n"
+"POT-Creation-Date: 2004-03-08 20:27+0100\n"
+"PO-Revision-Date: 2004-03-12 11:44+0100\n"
 "Last-Translator: Branko Collin <collin@xs4all.nl>\n"
 "Language-Team: Dutch <vertaling@nl.linux.org>\n"
 "MIME-Version: 1.0\n"
@@ -18,16 +17,23 @@ msgstr ""
 msgid "Brush Selection"
 msgstr "Penseelselectie"
 
-#: libgimp/gimpbrushmenu.c:161 libgimp/gimppatternmenu.c:144
+# Kan ook 'browsen' zijn
+# of misschien 'Overzicht' (een overzicht van alle beschikbare patronen
+# en borstels)
+#: libgimp/gimpbrushmenu.c:161
+#: libgimp/gimppatternmenu.c:144
 msgid "_Browse..."
-msgstr ""
+msgstr "_Bladeren..."
 
-#: libgimp/gimpexport.c:215 libgimp/gimpexport.c:251
+#: libgimp/gimpexport.c:215
+#: libgimp/gimpexport.c:251
 #, c-format
 msgid "%s can't handle layers"
 msgstr "%s ondersteunt geen lagen"
 
-#: libgimp/gimpexport.c:216 libgimp/gimpexport.c:225 libgimp/gimpexport.c:234
+#: libgimp/gimpexport.c:216
+#: libgimp/gimpexport.c:225
+#: libgimp/gimpexport.c:234
 msgid "Merge Visible Layers"
 msgstr "Zichtbare lagen samenvoegen"
 
@@ -36,16 +42,20 @@ msgstr "Zichtbare lagen samenvoegen"
 msgid "%s can't handle layer offsets, size or opacity"
 msgstr "%s ondersteunt geen laagverspringen, -grootte of -ondoorzichtigheid"
 
-#: libgimp/gimpexport.c:233 libgimp/gimpexport.c:242
+#: libgimp/gimpexport.c:233
+#: libgimp/gimpexport.c:242
 #, c-format
 msgid "%s can only handle layers as animation frames"
 msgstr "%s ondersteunt enkel lagen als animatieframes"
 
-#: libgimp/gimpexport.c:234 libgimp/gimpexport.c:243
+#: libgimp/gimpexport.c:234
+#: libgimp/gimpexport.c:243
 msgid "Save as Animation"
 msgstr "Opslaan als animatie"
 
-#: libgimp/gimpexport.c:243 libgimp/gimpexport.c:252 libgimp/gimpexport.c:261
+#: libgimp/gimpexport.c:243
+#: libgimp/gimpexport.c:252
+#: libgimp/gimpexport.c:261
 msgid "Flatten Image"
 msgstr "Afbeelding pletten"
 
@@ -55,21 +65,22 @@ msgid "%s can't handle transparency"
 msgstr "%s ondersteunt geen transparantie"
 
 #: libgimp/gimpexport.c:269
-#, fuzzy, c-format
+#, c-format
 msgid "%s can't handle layer masks"
-msgstr "%s ondersteunt geen lagen"
+msgstr "%s ondersteunt geen laagmaskers"
 
 #: libgimp/gimpexport.c:270
-#, fuzzy
 msgid "Apply Layer Masks"
-msgstr "een laagmasker"
+msgstr "Laagmaskers toepassen"
 
 #: libgimp/gimpexport.c:278
 #, c-format
 msgid "%s can only handle RGB images"
 msgstr "%s ondersteunt enkel RGB-afbeeldingen"
 
-#: libgimp/gimpexport.c:279 libgimp/gimpexport.c:317 libgimp/gimpexport.c:326
+#: libgimp/gimpexport.c:279
+#: libgimp/gimpexport.c:317
+#: libgimp/gimpexport.c:326
 msgid "Convert to RGB"
 msgstr "Converteren naar RGB"
 
@@ -78,7 +89,9 @@ msgstr "Converteren naar RGB"
 msgid "%s can only handle grayscale images"
 msgstr "%s ondersteunt enkel grijswaardenafbeeldingen"
 
-#: libgimp/gimpexport.c:288 libgimp/gimpexport.c:317 libgimp/gimpexport.c:338
+#: libgimp/gimpexport.c:288
+#: libgimp/gimpexport.c:317
+#: libgimp/gimpexport.c:338
 msgid "Convert to Grayscale"
 msgstr "Converteren naar grijswaarden"
 
@@ -87,23 +100,28 @@ msgstr "Converteren naar grijswaarden"
 msgid "%s can only handle indexed images"
 msgstr "%s ondersteunt enkel geïndexeerde afbeeldingen"
 
-#: libgimp/gimpexport.c:297 libgimp/gimpexport.c:326 libgimp/gimpexport.c:336
+#: libgimp/gimpexport.c:297
+#: libgimp/gimpexport.c:326
+#: libgimp/gimpexport.c:336
 msgid ""
 "Convert to Indexed using default settings\n"
 "(Do it manually to tune the result)"
-msgstr "(Doe het met de hand om het resultaat fijn te regelen)"
+msgstr ""
+"Omzetten naar geïndexeerd met standaardinstellingen\n"
+"(Doe dit handmatig om het resultaat fijn te regelen)"
 
 #: libgimp/gimpexport.c:306
-#, fuzzy, c-format
+#, c-format
 msgid "%s can only handle bitmap (two color) indexed images"
-msgstr "%s ondersteunt enkel RGB en Geïndexeerd"
+msgstr "%s ondersteunt enkel bitmap- (twee kleuren) en geïndexeerde afbeeldingen"
 
 #: libgimp/gimpexport.c:307
-#, fuzzy
 msgid ""
 "Convert to Indexed using bitmap default settings\n"
 "(Do it manually to tune the result)"
-msgstr "(Doe het met de hand om het resultaat fijn te regelen)"
+msgstr ""
+"Omzetten naar Geïndexeerd met standaardinstellingen voor bitmap\n"
+"(Doe dit handmatig om het resultaat fijn te regelen)"
 
 #: libgimp/gimpexport.c:316
 #, c-format
@@ -123,11 +141,11 @@ msgstr "%s ondersteunt enkel Grijswaarden en Geïndexeerd"
 #: libgimp/gimpexport.c:346
 #, c-format
 msgid "%s needs an alpha channel"
-msgstr "%s heeft een Alpha-kanaal nodig"
+msgstr "%s heeft een alphakanaal nodig"
 
 #: libgimp/gimpexport.c:347
 msgid "Add Alpha Channel"
-msgstr "Alpha-kanaal toevoegen"
+msgstr "Alphakanaal toevoegen"
 
 #: libgimp/gimpexport.c:382
 msgid "Confirm Save"
@@ -135,31 +153,25 @@ msgstr "Bevestig opslaan"
 
 #: libgimp/gimpexport.c:388
 msgid "Confirm"
-msgstr "Bevestig"
+msgstr "Bevestigen"
 
 #: libgimp/gimpexport.c:457
 msgid "Export File"
 msgstr "Bestand exporteren"
 
 #: libgimp/gimpexport.c:461
-#, fuzzy
 msgid "_Ignore"
-msgstr "Negeren"
+msgstr "_Negeren"
 
 #: libgimp/gimpexport.c:463
-#, fuzzy
 msgid "_Export"
-msgstr "Exporteren"
+msgstr "_Exporteren"
 
-#. the headline
+#  the headline
 #: libgimp/gimpexport.c:485
-#, fuzzy, c-format
-msgid ""
-"Your image should be exported before it can be saved as %s for the following "
-"reasons:"
-msgstr ""
-"Uw afbeelding moet geëxporteerd worden, voordat zij bewaard kan worden, om "
-"de volgende redenen:"
+#, c-format
+msgid "Your image should be exported before it can be saved as %s for the following reasons:"
+msgstr "Voordat uw afbeelding als %s opgeslagen kan worden moet zij eerst geëxporteerd worden, om de volgende redenen:"
 
 #: libgimp/gimpexport.c:563
 msgid "The export conversion won't modify your original image."
@@ -201,11 +213,12 @@ msgstr "Patroonselectie"
 
 #: libgimp/gimpunitcache.c:57
 msgid "percent"
-msgstr "percent"
+msgstr "procent"
 
-#: libgimpbase/gimputils.c:161 libgimpbase/gimputils.c:166
+#: libgimpbase/gimputils.c:161
+#: libgimpbase/gimputils.c:166
 msgid "(invalid UTF-8 string)"
-msgstr ""
+msgstr "(ongeldige UTF-8 tekenreeks)"
 
 #: libgimpbase/gimputils.c:244
 #, c-format
@@ -238,38 +251,38 @@ msgid "%.1f MB"
 msgstr "%.1f MB"
 
 #: libgimpbase/gimputils.c:272
-#, fuzzy, c-format
+#, c-format
 msgid "%d MB"
-msgstr "%d kB"
+msgstr "%d MB"
 
 #: libgimpbase/gimputils.c:279
-#, fuzzy, c-format
+#, c-format
 msgid "%.2f GB"
-msgstr "%.2f MB"
+msgstr "%.2f GB"
 
 #: libgimpbase/gimputils.c:283
-#, fuzzy, c-format
+#, c-format
 msgid "%.1f GB"
-msgstr "%.1f MB"
+msgstr "%.1f GB"
 
 #: libgimpbase/gimputils.c:287
-#, fuzzy, c-format
+#, c-format
 msgid "%d GB"
-msgstr "%d kB"
+msgstr "%d GB"
 
 #: libgimpmodule/gimpmodule.c:177
 #, c-format
 msgid "Loading module: '%s'\n"
-msgstr "module '%s' wordt geladen\n"
+msgstr "Module '%s' wordt geladen\n"
 
-#: libgimpmodule/gimpmodule.c:194 libgimpmodule/gimpmodule.c:213
-#: libgimpmodule/gimpmodule.c:328 libgimpmodule/gimpmodule.c:356
+#: libgimpmodule/gimpmodule.c:194
+#: libgimpmodule/gimpmodule.c:213
+#: libgimpmodule/gimpmodule.c:328
+#: libgimpmodule/gimpmodule.c:356
 #: libgimpmodule/gimpmodule.c:450
-#, fuzzy, c-format
+#, c-format
 msgid "Module '%s' load error: %s"
-msgstr ""
-"Laadfout module: '%s': \n"
-"%s"
+msgstr "Laadfout module '%s': %s"
 
 #: libgimpmodule/gimpmodule.c:283
 #, c-format
@@ -295,89 +308,107 @@ msgstr "Niet geladen"
 #: libgimpthumb/gimpthumb-utils.c:196
 #, c-format
 msgid "Failed to create thumbnail folder '%s'."
-msgstr ""
+msgstr "Kon de map '%s' voor de miniaturen niet aanmaken."
 
 #: libgimpwidgets/gimpcolorbutton.c:93
-#, fuzzy
 msgid "/_Foreground Color"
-msgstr "/Voorgrondkleur"
+msgstr "/_Voorgrondkleur"
 
 #: libgimpwidgets/gimpcolorbutton.c:95
-#, fuzzy
 msgid "/_Background Color"
-msgstr "/Achtergrondkleur"
+msgstr "/_Achtergrondkleur"
 
 #: libgimpwidgets/gimpcolorbutton.c:98
-#, fuzzy
 msgid "/Blac_k"
-msgstr "/Zwart"
+msgstr "/_Zwart"
 
 #: libgimpwidgets/gimpcolorbutton.c:100
-#, fuzzy
 msgid "/_White"
-msgstr "/Wit"
+msgstr "/_Wit"
 
-# 'Schaalt'? 'Schubben'?
+# 'Schaalt'? 'Schubben'? Weegschalen
+# Misschien gaat het over kleurbereik
 #: libgimpwidgets/gimpcolorscales.c:142
 msgid "Scales"
-msgstr "Weegschalen"
+msgstr "Schalen"
 
-#: libgimpwidgets/gimpcolorscales.c:164 libgimpwidgets/gimpcolorselect.c:353
+# Deze letters moeten eigenlijk overeenkomen met de Nederlandse vertaling
+# Hue-kleurtoon
+#: libgimpwidgets/gimpcolorscales.c:164
+#: libgimpwidgets/gimpcolorselect.c:353
 msgid "_H"
-msgstr "_H"
+msgstr "_K"
 
-#: libgimpwidgets/gimpcolorscales.c:165 libgimpwidgets/gimpcolorselect.c:353
+# Saturation-verzadiging
+#: libgimpwidgets/gimpcolorscales.c:165
+#: libgimpwidgets/gimpcolorselect.c:353
 msgid "_S"
-msgstr "_S"
-
-#: libgimpwidgets/gimpcolorscales.c:166 libgimpwidgets/gimpcolorselect.c:353
-msgid "_V"
 msgstr "_V"
 
-#: libgimpwidgets/gimpcolorscales.c:167 libgimpwidgets/gimpcolorselect.c:353
+# Value-waarde
+#: libgimpwidgets/gimpcolorscales.c:166
+#: libgimpwidgets/gimpcolorselect.c:353
+msgid "_V"
+msgstr "_W"
+
+# Red-rood
+#: libgimpwidgets/gimpcolorscales.c:167
+#: libgimpwidgets/gimpcolorselect.c:353
 msgid "_R"
 msgstr "_R"
 
-#: libgimpwidgets/gimpcolorscales.c:168 libgimpwidgets/gimpcolorselect.c:353
+# Green-groen
+#: libgimpwidgets/gimpcolorscales.c:168
+#: libgimpwidgets/gimpcolorselect.c:353
 msgid "_G"
 msgstr "_G"
 
-#: libgimpwidgets/gimpcolorscales.c:169 libgimpwidgets/gimpcolorselect.c:353
+# Blue-blauw
+#: libgimpwidgets/gimpcolorscales.c:169
+#: libgimpwidgets/gimpcolorselect.c:353
 msgid "_B"
 msgstr "_B"
 
+# Alpha-alfa
 #: libgimpwidgets/gimpcolorscales.c:170
 msgid "_A"
 msgstr "_A"
 
-#: libgimpwidgets/gimpcolorscales.c:174 libgimpwidgets/gimpcolorselect.c:357
+#: libgimpwidgets/gimpcolorscales.c:174
+#: libgimpwidgets/gimpcolorselect.c:357
 msgid "Hue"
 msgstr "Kleurtoon"
 
-#: libgimpwidgets/gimpcolorscales.c:175 libgimpwidgets/gimpcolorselect.c:358
+#: libgimpwidgets/gimpcolorscales.c:175
+#: libgimpwidgets/gimpcolorselect.c:358
 #: modules/cdisplay_proof.c:323
 msgid "Saturation"
 msgstr "Verzadiging"
 
-#: libgimpwidgets/gimpcolorscales.c:176 libgimpwidgets/gimpcolorselect.c:359
+#: libgimpwidgets/gimpcolorscales.c:176
+#: libgimpwidgets/gimpcolorselect.c:359
 msgid "Value"
 msgstr "Waarde"
 
-#: libgimpwidgets/gimpcolorscales.c:177 libgimpwidgets/gimpcolorselect.c:360
+#: libgimpwidgets/gimpcolorscales.c:177
+#: libgimpwidgets/gimpcolorselect.c:360
 msgid "Red"
 msgstr "Rood"
 
-#: libgimpwidgets/gimpcolorscales.c:178 libgimpwidgets/gimpcolorselect.c:361
+#: libgimpwidgets/gimpcolorscales.c:178
+#: libgimpwidgets/gimpcolorselect.c:361
 msgid "Green"
 msgstr "Groen"
 
-#: libgimpwidgets/gimpcolorscales.c:179 libgimpwidgets/gimpcolorselect.c:362
+#: libgimpwidgets/gimpcolorscales.c:179
+#: libgimpwidgets/gimpcolorselect.c:362
 msgid "Blue"
 msgstr "Blauw"
 
-#: libgimpwidgets/gimpcolorscales.c:180 libgimpwidgets/gimpcolorselect.c:363
+#: libgimpwidgets/gimpcolorscales.c:180
+#: libgimpwidgets/gimpcolorselect.c:363
 msgid "Alpha"
-msgstr "Alfa"
+msgstr "Alpha"
 
 #: libgimpwidgets/gimpcolorscales.c:254
 msgid "Hexadecimal color notation as used in HTML"
@@ -387,13 +418,16 @@ msgstr "Hexadecimale kleurnotatie zoals gebruikt in HTML"
 msgid "He_x Triplet:"
 msgstr "He_xtriple:"
 
+# Huidige kleur
+# (niet huidig kleur)
 #: libgimpwidgets/gimpcolorselection.c:203
 msgid "Current:"
-msgstr ""
+msgstr "Huidige:"
 
+# Vorige kleur
 #: libgimpwidgets/gimpcolorselection.c:225
 msgid "Old:"
-msgstr ""
+msgstr "Oude:"
 
 #: libgimpwidgets/gimpfileentry.c:350
 msgid "Select Folder"
@@ -416,12 +450,8 @@ msgid "GigaBytes"
 msgstr "Gigabytes"
 
 #: libgimpwidgets/gimppickbutton.c:141
-msgid ""
-"Click the eyedropper, then click a color anywhere on your screen to select "
-"that color."
-msgstr ""
-"Klik op de druppelaar en vervolgens een kleur op het scherm om die kleur te "
-"selecteren."
+msgid "Click the eyedropper, then click a color anywhere on your screen to select that color."
+msgstr "Klik op de druppelaar en vervolgens een kleur op het scherm om die kleur te selecteren."
 
 #: libgimpwidgets/gimpstock.c:113
 msgid "Anchor"
@@ -467,7 +497,8 @@ msgstr "_Regelhoogte"
 msgid "_Resize"
 msgstr "_Herschalen"
 
-#: libgimpwidgets/gimpstock.c:185 libgimpwidgets/gimpstock.c:284
+#: libgimpwidgets/gimpstock.c:185
+#: libgimpwidgets/gimpstock.c:284
 msgid "_Scale"
 msgstr "_Schalen"
 
@@ -504,26 +535,20 @@ msgid "Factor"
 msgstr "Factor"
 
 #: libgimpwidgets/gimpwidgets.c:1271
-msgid ""
-"Use this value for random number generator seed - this allows you to repeat "
-"a given \"random\" operation"
-msgstr ""
-"Gebruik deze waarde als bron voor de generering van willekeurige nummers. "
-"Hiermee kunt u een bepaalde \"random\" operatie herhalen."
+msgid "Use this value for random number generator seed - this allows you to repeat a given \"random\" operation"
+msgstr "Gebruik deze waarde als bron voor de generering van willekeurige nummers. Hiermee kunt u een bepaalde \"willekeurige\" operatie herhalen."
 
 #: libgimpwidgets/gimpwidgets.c:1275
 msgid "_New Seed"
-msgstr ""
+msgstr "_Nieuw brongetal"
 
 #: libgimpwidgets/gimpwidgets.c:1288
 msgid "Seed random number generator with a generated random number"
-msgstr ""
-"Gebruik een gegenereerd willekeurig nummer als bron voor de generering van "
-"een volgend willekeurig nummer."
+msgstr "Gebruik een gegenereerd willekeurig nummer als bron voor de generering van een volgend willekeurig nummer."
 
+# Husselen zou misschien kunnen, maar willekeurig maken is wel goed zo.
 #: libgimpwidgets/gimpwidgets.c:1292
-#, fuzzy
-msgid "Randomize"
+msgid "_Randomize"
 msgstr "_Willekeurig maken"
 
 #: modules/cdisplay_colorblind.c:124
@@ -534,6 +559,7 @@ msgstr "Simulatie beperkt kleurzicht (Brettel-Vienot-Mollon-algoritme)"
 msgid "Color Deficient Vision"
 msgstr "Beperkt kleurzicht"
 
+# Kleur_deficientietype:
 #: modules/cdisplay_colorblind.c:464
 #, fuzzy
 msgid "Color _Deficiency Type:"
@@ -562,9 +588,8 @@ msgid "Gamma"
 msgstr "Gamma"
 
 #: modules/cdisplay_gamma.c:311
-#, fuzzy
 msgid "_Gamma:"
-msgstr "Gamma:"
+msgstr "_Gamma:"
 
 #: modules/cdisplay_highcontrast.c:90
 msgid "High Contrast color display filter"
@@ -575,45 +600,49 @@ msgid "Contrast"
 msgstr "Contrast"
 
 #: modules/cdisplay_highcontrast.c:308
-#, fuzzy
 msgid "Contrast C_ycles:"
-msgstr "Contrast-cycles:"
+msgstr "Contrast-c_ycles:"
 
 #: modules/cdisplay_proof.c:102
 msgid "Color proof filter using ICC color profile"
-msgstr ""
+msgstr "Kleurcontrolefilter die het ICC-kleurpofiel gebruikt"
 
 #: modules/cdisplay_proof.c:166
 msgid "Color Proof"
-msgstr ""
+msgstr "Kleurcontrole"
 
+# waarneembaar?
 #: modules/cdisplay_proof.c:319
 msgid "Perceptual"
-msgstr ""
+msgstr "Gevoelsmatig"
 
 #: modules/cdisplay_proof.c:321
 msgid "Relative Colorimetric"
-msgstr ""
+msgstr "Relatief colorimetrisch"
 
 #: modules/cdisplay_proof.c:325
 msgid "Absolute Colorimetric"
-msgstr ""
+msgstr "Absoluut colorimetrisch"
 
+# Feitelijk
 #: modules/cdisplay_proof.c:331
 msgid "_Intent:"
-msgstr ""
+msgstr "_Bedoeling:"
 
+# kiezen / uitkiezen 
 #: modules/cdisplay_proof.c:334
 msgid "Choose an ICC Color Profile"
-msgstr ""
+msgstr "Een ICC-kleurprofiel uitkiezen"
 
 #: modules/cdisplay_proof.c:337
 msgid "_Profile:"
-msgstr ""
+msgstr "_Profiel:"
 
+# Zwart compensatie?
+# Zwartpunt compensatie
 #: modules/cdisplay_proof.c:345
 msgid "_Black Point Compensation"
-msgstr ""
+msgstr "Zwartpuntcompensatie"
 
 #: modules/colorsel_cmyk.c:73
 msgid "CMYK color selector"
@@ -655,10 +684,12 @@ msgstr "Geel"
 msgid "Black"
 msgstr "Zwart"
 
+# Zwart-onttrekking (%):
 #: modules/colorsel_cmyk.c:193
 msgid "Black Pullout (%):"
-msgstr ""
+msgstr "Zwart-onttrekking (%):"
 
+# Driehoekige kleurkiezer in schilderstijl
 #: modules/colorsel_triangle.c:110
 msgid "Painter-style triangle color selector"
 msgstr "Painterachtige driehoekige kleurkiezer"
@@ -679,56 +710,3 @@ msgstr "Waterverf"
 msgid "Pressure"
 msgstr "Druk"
 
-#~ msgid "Preview"
-#~ msgstr "Vooruitblik"
-
-#~ msgid ""
-#~ "No %s in gimprc:\n"
-#~ "You need to add an entry like\n"
-#~ "(%s \"%s\")\n"
-#~ "to your %s file."
-#~ msgstr ""
-#~ "Geen %s in gimprc:\n"
-#~ "U moet een ingang als\n"
-#~ "(%s \"%s\") aan uw\n"
-#~ "bestand %s toevoegen."
-
-#, fuzzy
-#~ msgid "Parameter Settings"
-#~ msgstr "Patroonselectie"
-
-#~ msgid "None (normal vision)"
-#~ msgstr "Geen (normaal zicht)"
-
-#~ msgid "a channel (saved selection)"
-#~ msgstr "een kanaal (opgeslagen selectie)"
-
-#~ msgid "_Time"
-#~ msgstr "Tijd"
-
-#~ msgid "OK"
-#~ msgstr "OK"
-
-#~ msgid "pixel"
-#~ msgstr "pixel"
-
-#~ msgid "pixels"
-#~ msgstr "pixels"
-
-#~ msgid "inches"
-#~ msgstr "duim"
-
-#~ msgid "millimeter"
-#~ msgstr "millimeter"
-
-#~ msgid "millimeters"
-#~ msgstr "millimeter"
-
-#~ msgid "point"
-#~ msgstr "punt"
-
-#~ msgid "points"
-#~ msgstr "punt"
-
-#~ msgid "picas"
-#~ msgstr "pica"
