2004-03-13  Michael Natterer  <mitch@gimp.org>
	* libgimp/libgimp-sections.txt
	* libgimp/tmpl/gimpdrawable.sgml
	* libgimp/tmpl/gimppixelfetcher.sgml: updated after
	GimpPixelFetcher changes.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12630 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,10 @@
+2004-03-13  Michael Natterer  <mitch@gimp.org>
+
+	* libgimp/libgimp-sections.txt
+	* libgimp/tmpl/gimpdrawable.sgml
+	* libgimp/tmpl/gimppixelfetcher.sgml: updated after
+	GimpPixelFetcher changes.
+
 2004-03-04  Sven Neumann  <sven@gimp.org>
 
 	* libgimpwidgets/libgimpwidgets-sections.txt
