2004-03-13  Sven Neumann  <sven@gimp.org>
	* app/tools/gimptexttool.[ch]: keep a pointer on the active text
	layer and let the tool follow the active layer. Fixes bug #124970.

	* app/gui/layers-commands.c: changed accordingly.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12631 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-03-13  Sven Neumann  <sven@gimp.org>
+
+	* app/tools/gimptexttool.[ch]: keep a pointer on the active text
+	layer and let the tool follow the active layer. Fixes bug #124970.
+
+	* app/gui/layers-commands.c: changed accordingly.
+
 2004-03-12  Michael Natterer  <mitch@gimp.org>
 
 	Cleaned up the remaining libgimp API issues:
