2004-03-13  Sven Neumann  <sven@gimp.org>
	* app/widgets/gimpcontainermenuimpl.c: marked missing string for
	translation (spotted by Branko Collin).


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12633 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-03-13  Sven Neumann  <sven@gimp.org>
 
+	* app/widgets/gimpcontainermenuimpl.c: marked missing string for
+	translation (spotted by Branko Collin).
+
+2004-03-13  Sven Neumann  <sven@gimp.org>
+
 	* app/tools/gimptextoptions.[ch]: use a GimpSizeEntry for the
 	font size.
 
