2004-03-13  Sven Neumann  <sven@gimp.org>
	* app/tools/gimptexttool.c (gimp_text_tool_set_layer): bugfix.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12634 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-03-13  Sven Neumann  <sven@gimp.org>
 
+	* app/tools/gimptexttool.c (gimp_text_tool_set_layer): bugfix.
+
+2004-03-13  Sven Neumann  <sven@gimp.org>
+
 	* app/widgets/gimpcontainermenuimpl.c: marked missing string for
 	translation (spotted by Branko Collin).
 
