2004-03-13  Raphael Quinet  <quinet@gamers.org>
	* app/tools/gimptexttool.c (gimp_text_tool_set_layer): added
	missing semicolon that was breaking the build.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12635 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-13  Raphaël Quinet  <quinet@gamers.org>
+
+	* app/tools/gimptexttool.c (gimp_text_tool_set_layer): added
+	missing semicolon that was breaking the build.
+
 2004-03-13  Sven Neumann  <sven@gimp.org>
 
 	* app/tools/gimptexttool.c (gimp_text_tool_set_layer): bugfix.
