22004-03-13  Sven Neumann  <sven@gimp.org>
	* app/paint-funcs/paint-funcs.c: use g_printerr() for debug output.

	* app/base/tile-manager.c: cleaned up stone-old debug output.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12637 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-03-13  Sven Neumann  <sven@gimp.org>
+
+	* app/paint-funcs/paint-funcs.c: use g_printerr() for debug output.
+
+	* app/base/tile-manager.c: cleaned up stone-old debug output.
+
 2004-03-13  Raphaël Quinet  <quinet@gamers.org>
 
 	* app/tools/gimptransformoptions.[ch]: added new "supersample"
