2004-03-13  Sven Neumann  <sven@gimp.org>
	* app/tools/gimptransformoptions.c (gimp_transform_options_gui): for
	consistency, changed the label from "Supersample" to "Supersampling".


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12638 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-03-13  Sven Neumann  <sven@gimp.org>
 
+	* app/tools/gimptransformoptions.c (gimp_transform_options_gui): for
+	consistency, changed the label from "Supersample" to "Supersampling".
+
+2004-03-13  Sven Neumann  <sven@gimp.org>
+
 	* app/paint-funcs/paint-funcs.c: use g_printerr() for debug output.
 
 	* app/base/tile-manager.c: cleaned up stone-old debug output.
