2004-03-13  Pedro Gimeno  <pggimeno@wanadoo.es>
	* plug-ins/script-fu/scripts/carve-it.scm
	* plug-ins/script-fu/scripts/chrome-it.scm
	* plug-ins/script-fu/scripts/crystal-logo.scm
	* plug-ins/script-fu/scripts/sota-chrome-logo.scm: Fixed to avoid
	pasting to a layer that was not added to any image. This was causing
	the scripts to abort, because gimp-edit-paste is now failing in that
	case.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12642 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2004-03-13  Pedro Gimeno  <pggimeno@wanadoo.es>
+
+	* plug-ins/script-fu/scripts/carve-it.scm
+	* plug-ins/script-fu/scripts/chrome-it.scm
+	* plug-ins/script-fu/scripts/crystal-logo.scm
+	* plug-ins/script-fu/scripts/sota-chrome-logo.scm: Fixed to avoid
+	pasting to a layer that was not added to any image. This was causing
+	the scripts to abort, because gimp-edit-paste is now failing in that
+	case.
+
 2004-03-13  Sven Neumann  <sven@gimp.org>
 
 	* app/tools/gimpblendoptions.c: override the "gradient_repeat"
