2004-03-13  Simon Budig  <simon@gimp.org>
	* app/widgets/widgets-enums.h
	* app/widgets/gimppreviewrenderer.[ch]: New function
	gimp_preview_renderer_set_border_type that takes an enum instead
	of an color to set the color of the border.

	* app/widgets/gimpcellrendererviewable.c: check for the
	current border_type and change it to black when it is white and
	the cell is unselected. This should be solved in a better way
	later.

	Fixes bug #135023.

	* app/widgets/gimplayertreeview.c
	* app/widgets/gimpcontainergridview.c: changed to use the new
	function.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12643 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,21 @@
+2004-03-13  Simon Budig  <simon@gimp.org>
+
+	* app/widgets/widgets-enums.h
+	* app/widgets/gimppreviewrenderer.[ch]: New function 
+	gimp_preview_renderer_set_border_type that takes an enum instead
+	of an color to set the color of the border.
+
+	* app/widgets/gimpcellrendererviewable.c: check for the
+	current border_type and change it to black when it is white and
+	the cell is unselected. This should be solved in a better way
+	later.
+
+	Fixes bug #135023. 
+
+	* app/widgets/gimplayertreeview.c
+	* app/widgets/gimpcontainergridview.c: changed to use the new
+	function.
+
 2004-03-13  Pedro Gimeno  <pggimeno@wanadoo.es>
 
 	* plug-ins/script-fu/scripts/carve-it.scm
