2004-03-13  Sven Neumann  <sven@gimp.org>
	* app/core/gimpdrawable-blend.c (gradient_calc_shapeburst_*):
	applied a patch from Pedro Gimeno that fixes the crash reported in
	bug #136219.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12645 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-03-13  Sven Neumann  <sven@gimp.org>
+
+	* app/core/gimpdrawable-blend.c (gradient_calc_shapeburst_*):
+	applied a patch from Pedro Gimeno that fixes the crash reported in
+	bug #136219.
+
 2004-03-13  Michael Natterer  <mitch@gimp.org>
 
 	Completed the fix for bug #136702:
